Reworked JSON Handling.
Dev update 2